# dprint-plugin-kdl

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yml  dprint-dogfooding.json  dprint-test.json  dprint.json  flake.nix
.github/: dependabot.yml  pinact.yaml  renovate.json
.github/workflows/: bump-flake-lock-and-selfup.yml  ci-nix.yml  dependency-review.yml  lint.yml  merge-bot-pr.yml  nix.yml
example/: official.expected.kdl  official.raw.kdl  v1.expected.kdl  v1.raw.kdl  zellij-config.expected.kdl  zellij-config.wrong.kdl
example/known_issues/: slashdash.kdl
src/: lib.rs
