[package]
name = "dprint-plugin-kdl"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
dprint-core = { version = "0.67.4", features = ["wasm"] }
kdl = { version = "6.3.4", features = ["v1-fallback"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[lib]
crate-type = ["lib", "cdylib"]
