[package]
name = "dprint-plugin-kdl"
version = "0.3.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
dprint-core = { version = "0.67.4", features = ["wasm"] }
kdl = "6.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[lib]
crate-type = ["lib", "cdylib"]
